@@ -1,12 +1,11 @@
 package com.keycode.motorescolombia.service.impl;
 
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
 
+import com.keycode.motorescolombia.dto.in.AutomotorDtoIn;
+import com.keycode.motorescolombia.dto.out.AutomotorDtoOut;
 import com.keycode.motorescolombia.exception.NotFoundException;
+import com.keycode.motorescolombia.mapper.AutomotorMapper;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -15,9 +14,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import com.keycode.motorescolombia.dto.AutomotorDTO;
-import com.keycode.motorescolombia.dto.ReservaDTO;
 import com.keycode.motorescolombia.jpa.entity.Automotor;
-import com.keycode.motorescolombia.jpa.entity.Reserva;
 import com.keycode.motorescolombia.jpa.repository.AutomotorRepository;
 import com.keycode.motorescolombia.service.IAutomotorService;
 
@@ -35,50 +32,47 @@ public class AutomotorService implements IAutomotorService {
     private ModelMapper mapper;
 
     @Override
-    public List<AutomotorDTO> obtenerAutomotores(int page) {
+    public List<AutomotorDtoOut> obtenerAutomotores(int page) {
         Pageable paginacion = PageRequest.of(page, 10, Sort.by("linea"));
 
-        return Stream.of(automotorRepository
-                .findAllByReserva(paginacion, null)
-                .get()).collect(Collectors.toList())
-                .stream()
-                .map(automotor -> mapper.map(automotor, AutomotorDTO.class))
-                .collect(Collectors.toList());
+        return AutomotorMapper.MAPPER.map(automotorRepository.findAll(paginacion).get().toList());
+
+//        return Stream.of(automotorRepository
+//                .findAllByReserva(paginacion, null)
+//                .get()).collect(Collectors.toList())
+//                .stream()
+//                .map(automotor -> mapper.map(automotor, AutomotorDTO.class))
+//                .collect(Collectors.toList());
     }
 
     @Override
-    public List<AutomotorDTO> obtenerAutomotoresAll() {
-        return StreamSupport
-                .stream(automotorRepository.findAll(Sort.by("linea")).spliterator(), false)
-                .collect(Collectors.toList())
-                .stream()
-                .map(automotor -> {
-                    AutomotorDTO automotorDTO = mapper.map(automotor, AutomotorDTO.class);
-
-                    if (Objects.nonNull(automotorDTO.getReserva())) {
-                        ReservaDTO reservaDTO = automotorDTO.getReserva();
-                        reservaDTO.setAutomotorCompleto(
-                                automotor.getMarca() + " " + automotor.getLinea() + " " + automotor.getModelo());
-                        automotorDTO.setReserva(reservaDTO);
-                    }
-
-                    return automotorDTO;
-                })
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public Automotor obtenerAutomotorById(Long id) throws NotFoundException {
-        return automotorRepository
+    public AutomotorDtoOut obtenerAutomotorById(Long id) throws NotFoundException {
+        Automotor automotor = automotorRepository
                 .findById(id)
                 .orElseThrow(
                         () -> new NotFoundException(String.format(MSG_ERROR_NOT_FOUND, id)));
+        return AutomotorMapper.MAPPER.map(automotor);
     }
 
     @Override
-    public void asignarReserva(Automotor automotor, Reserva reserva) {
-        automotor.setReserva(reserva);
-        automotorRepository.save(automotor);
+    public void crearAutomotor(AutomotorDtoIn automotor) {
+        Automotor automotorEntity = new Automotor();
+        automotorEntity.setMarca(automotor.getMarca());
+        automotorEntity.setLinea(automotor.getLinea());
+        automotorEntity.setModelo(automotor.getModelo());
+
+        automotorRepository.save(automotorEntity);
+    }
+
+    public void actualizarAutomotor(Long idAutomotor, AutomotorDtoIn automotor) throws NotFoundException {
+        Automotor automotorEntity = automotorRepository.findById(idAutomotor)
+                .orElseThrow(() -> new NotFoundException(String.format(MSG_ERROR_NOT_FOUND, idAutomotor)));
+
+        automotorEntity.setMarca(automotor.getMarca());
+        automotorEntity.setLinea(automotor.getLinea());
+        automotorEntity.setModelo(automotor.getModelo());
+
+        automotorRepository.save(automotorEntity);
     }
 
 }
